--- a/.github/workflows/zap_baseline.yml
+++ b/.github/workflows/zap_baseline.yml
@@ -7,10 +7,8 @@ jobs:
     name: zap
     steps:
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.6.1
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable'
-          target: 'http://juice-shop.herokuapp.com/' # Change URL or IP of your target application
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+          target: 'http://juice-shop.herokuapp.com/'
+  
